<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Security Controller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
	<string name="internet">Internet</string>
	<string name="contact">Contact</string>
	<string name="location">Location</string>
	<string name="imei">IMEI</string>
	<string name="sms">SMS</string>
	<string name="file">File</string>
	<string name="call">Call</string>
	
	<string name="transferable">Check for transitive call</string>
	<string name="timeinterval">Set the minimum time interval in second: </string>
	<string name="default_time_interval">10</string>
	<string name="submit">Submit</string>
	
	<string name="title_section1">Basic Setting</string>
	<string name="title_section2">Advanced Setting</string>
</resources>
