<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/advanced_interface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context="ntu.fyp.sjy.securitycontroller.MainActivity">
        
	<LinearLayout
	    android:id="@+id/advance_parent"
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
                  
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView 
				android:id="@+id/contact_source" 
				android:layout_width="60dp" 
			    android:layout_height="wrap_content"
			    android:text="@string/contact"/>
				
			<Switch 
				android:id="@+id/contact_source_switch" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"     
				android:layout_marginLeft="90dp"
			    android:onClick="contactSourceToggle"/>
	    </LinearLayout>
		
		<ntu.fyp.sjy.securitycontroller.MyGridView
		    android:id="@+id/contact_source_grid"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:isScrollContainer="false"
		    android:numColumns="1"
		    android:verticalSpacing="1dp" />
		
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    android:layout_marginTop="20dp">
		    
		    <TextView 
				android:id="@+id/location_source" 
			  	android:layout_width="60dp" 
				android:layout_height="wrap_content"
			    android:text="@string/location"/>
					
			<Switch 
				android:id="@+id/location_source_switch" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"   
				android:layout_marginLeft="90dp"
			    android:onClick="locationSourceToggle"/>
		</LinearLayout>
						
		
	    <ntu.fyp.sjy.securitycontroller.MyGridView   
		    android:id="@+id/location_source_grid"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:numColumns="1"/>
	    
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    android:layout_marginTop="20dp">

			  <TextView 
			    android:id="@+id/imei_source" 
				android:layout_width="60dp" 
		   	    android:layout_height="wrap_content"
			    android:text="@string/imei"/>
					
			<Switch 
				android:id="@+id/imei_source_switch" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
				android:layout_marginLeft="90dp"
			    android:onClick="imeiSourceToggle"/>  
		</LinearLayout>
	    
						

	    <ntu.fyp.sjy.securitycontroller.MyGridView
		    android:id="@+id/imei_source_grid"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		   	android:numColumns="1"/>
			  
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:orientation="horizontal" >

			<TextView 
			    android:id="@+id/sms_source" 
			    android:layout_width="60dp" 
			    android:layout_height="wrap_content"
			    android:text="@string/sms"/>
					
			<Switch 
				android:id="@+id/sms_source_switch" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
				android:layout_marginLeft="90dp" 
			    android:onClick="smsSourceToggle"/>   
		</LinearLayout>

		<ntu.fyp.sjy.securitycontroller.MyGridView
		    android:id="@+id/sms_source_grid"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:numColumns="1"/>	
			
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="60dp"/>
		
	</LinearLayout>
	
	
		
</ScrollView>
	
